# modeluploader

./: .gitattributes  .gitignore  MANIFEST.in  README.md  README_zh.md  main.py  pyproject.toml
.github/workflows/: pypi-publish.yml
modeluploader/: __init__.py  __main__.py  cli.py  config.py  gitignore_parser.py  huggingface_uploader.py  i18n.py  modelscope_uploader.py
tests/: test_modeluploader.py
